--- a/Trabajo2/app/src/main/res/layout/activity_login.xml
+++ b/Trabajo2/app/src/main/res/layout/activity_login.xml
@@ -26,15 +26,16 @@
             android:textSize="36sp" />
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@drawable/plantilla_circulo">
 
             <ImageView
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
                 android:src="@drawable/img_lobito"
                 android:contentDescription="Logo"
-                android:background="@drawable/plantilla_circulo"
                 android:scaleType="centerCrop" />
 
         </FrameLayout>
